tests/errors/attribute-export-symbol-invalid.ari
@export("bad-symbol")
fn value() -> i64 {
  return 1;
}
